added login validation

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -31,7 +31,7 @@
                 <tr>
                     <td>
                         <label for="loginName">Login:</label>
-                        <input id="loginName" type="text" oninput="API.checkLogin()" />
+                        <input id="loginName" type="text" onchange="API.checkLogin()" oninput="API.checkLogin()" />
                     </td>
                 </tr>
                 <tr>
