--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8" />
     <title>Assignment 1 - Films</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link type="text/css" , rel="stylesheet" href="./stylesheets/style.css" />
     <script type="text/javascript" src="./films.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
 <div class="back-drop">
 
-    <div id="header">
-        <ul class="horizontal-nav">
+    <!-- <div id="header">
+         <ul class="horizontal-nav">
             <li class="li-logo">
                 <a ref="/">
                     <img class="logo" alt="memories..." src="./images/Blockbusted_logo.png" />
@@ -21,57 +25,85 @@
             <li><a class="active" href="/">Menu Item Active</a></li>
             <li><a href="/">Menu Item Inactive</a></li>
             <li><a href="/">About</a></li>
-        </ul>
-    </div>
+        </ul> 
+    </div> -->
+
+            <nav class="navbar navbar-expand-lg navbar-light bg-light horizontal-nav">
+                <a class="navbar-brand" href="#">
+                    <img src="./images/Blockbusted_logo.png" height="40" class="d-inline-block align-top" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="#">Menu Item Active<span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="#">Menu Item Inctive</a>                    
+                    <a class="nav-item nav-link disabled" href="#">Menu Item Disabled</a>
+                    <a class="nav-item nav-link" href="#">About</a>
+                    </div>
+                </div>
+            </nav>
 
     <div id="main">
 
-        <div class="login-container">
-            <table>
-                <tr>
-                    <td>
-                        <label for="loginName">Login:</label>
-                        <input id="loginName" type="text" onchange="API.checkLogin()" oninput="API.checkLogin()" />
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <label for="password">Password:</label>
-                        <input id="password" type="password" value="" min="0" max="100" />
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2">
-                        <button id="LoginBtn" type="submit" disabled onclick="API.doLogin()">Login</button>
-                    </td>
-                </tr>
-            </table>
-        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm col-md">
+                    <div class="login-container">
+                        <table>
+                            <tr>
+                                <td>
+                                    <label for="loginName">Login:</label>
+                                    <input id="loginName" type="text" onchange="API.checkLogin()" oninput="API.checkLogin()" />
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label for="password">Password:</label>
+                                    <input id="password" type="password" value="" min="0" max="100" />
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <button id="LoginBtn" type="submit" disabled onclick="API.doLogin()">Login</button>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div id="film-div" class="film-add-container">
+                        <table>
+                            <tr>
+                                <td>
+                                    <label for="newFilmName">Name:</label>
+                                    <input id="newFilmName" type="text" />
+                                </td>
+                                <td>
+                                    <label for="newFilmRating">Rating:</label>
+                                    <input id="newFilmRating" type="number" value="100" min="0" max="100" />
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2"><button id="newFilmName" class="add-movies" type="submit" onclick="API.createFilm()">Add Film</button></td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="film-table-container">
+                        <button id="getFilmsButton" type="submit" onclick="API.getFilms()">Get All Films</button>
 
-        <div id="film-div" class="film-add-container">
-            <table>
-                <tr>
-                    <td>
-                        <label for="newFilmName">Name:</label>
-                        <input id="newFilmName" type="text" />
-                    </td>
-                    <td>
-                        <label for="newFilmRating">Rating:</label>
-                        <input id="newFilmRating" type="number" value="100" min="0" max="100" />
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2"><button id="newFilmName" class="add-movies" type="submit" onclick="API.createFilm()">Add Film</button></td>
-                </tr>
-            </table>
-        </div>
-
-        <p id="message-display" class="message-area">Welcome, please add a film.</p>
-
-        <div class="film-table-container">
-            <button id="getFilmsButton" type="submit" onclick="API.getFilms()">Get All Films</button>
-
-            <table class="film-table" id="film-listing"></table>
+                        <table class="film-table" id="film-listing"></table>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <p id="message-display" class="message-area">Welcome, please add a film.</p>
+                </div>
+            </div>
         </div>
 
     </div>
