--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,18 +1,143 @@
+<!doctype html>
+<html lang="en">
+<head>
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link type="text/css" , rel="stylesheet" href="./stylesheets/style.css" />
+
+<title>SE-572 Films Database</title>
+</head>
+<body>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS  -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script type="text/javascript" src="./env_config.js"></script>
+<script type="text/javascript" src="./films.js"></script>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary horizontal-nav">
+    <a class="navbar-brand" href="#">
+        <img src="./images/Blockbusted_logo.png" height="40" class="d-inline-block align-top" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#">Menu Item Active<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="#">Menu Item Inctive</a>                    
+        <a class="nav-item nav-link disabled" href="#">Menu Item Disabled</a>
+        <a class="nav-item nav-link" href="#">About</a>
+        </div>
+    </div>
+</nav>
+
+<div class="back-drop">
+    <!-- Three rows, equal-width columns on small, medium, large, and extra large devices
+    Row 1 - Login UI and Add/Modify Films
+    Row 2 - Get Film and table
+    Row 3 - User message text
+    -->
+    <div class="container">
+
+        <div class="row">
+            <div class="col-sm">
+                <div class="login-container">
+                    <table>
+                        <tr>
+                            <td>
+                                <label for="loginName">Login:</label>
+                                <input id="loginName" type="text" onchange="API.checkLogin()" oninput="API.checkLogin()" />
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label for="password">Password:</label>
+                                <input id="password" type="password" value="" min="0" max="100" />
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <button id="LoginBtn" type="submit" disabled onclick="API.doLogin()">Login</button>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div id="film-div" class="film-add-container">
+                    <table>
+                        <tr>
+                            <td>
+                                <label for="newFilmName">Name:</label>
+                                <input id="newFilmName" type="text" />
+                            </td>
+                            <td>
+                                <label for="newFilmRating">Rating:</label>
+                                <input id="newFilmRating" type="number" value="100" min="0" max="100" />
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <button id="newFilmName" class="add-movies" type="submit" onclick="API.createFilm()">Add Film</button>
+                                <button id="newFilmName" class="add-movies" type="submit" onclick="API.modifyFilm()">Modify Film</button>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm">
+                <div class="film-table-container">
+                    <button id="getFilmsButton" type="submit" onclick="API.getFilms()">Get All Films</button>
+
+                    <table class="film-table" id="film-listing"></table>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm">
+                <p id="message-display" class="message-area">Welcome, please add a film.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="footer">Copyright © me.com. All rights reserved.</div>
+
+</body>
+</html>
+
+
+<!-- 
 <html>
 
 <head>
     <meta charset="UTF-8" />
     <title>Assignment 1 - Films</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link type="text/css" , rel="stylesheet" href="./stylesheets/style.css" />
     <script type="text/javascript" src="./films.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body> 
 
-<div class="back-drop">
+<div class="back-drop">-->
 
-    <div id="header">
-        <ul class="horizontal-nav">
+    <!-- <div id="header">
+         <ul class="horizontal-nav">
             <li class="li-logo">
                 <a ref="/">
                     <img class="logo" alt="memories..." src="./images/Blockbusted_logo.png" />
@@ -21,65 +146,96 @@
             <li><a class="active" href="/">Menu Item Active</a></li>
             <li><a href="/">Menu Item Inactive</a></li>
             <li><a href="/">About</a></li>
-        </ul>
-    </div>
+        </ul> 
+    </div> -->
 
-    <div id="main">
+   <!--  <nav class="navbar navbar-expand-lg navbar-light bg-light horizontal-nav">
+        <a class="navbar-brand" href="#">
+            <img src="./images/Blockbusted_logo.png" height="40" class="d-inline-block align-top" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#">Menu Item Active<span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="#">Menu Item Inctive</a>                    
+            <a class="nav-item nav-link disabled" href="#">Menu Item Disabled</a>
+            <a class="nav-item nav-link" href="#">About</a>
+            </div>
+        </div>
+    </nav> -->
 
-        <div class="login-container">
-            <table>
-                <tr>
-                    <td>
-                        <label for="loginName">Login:</label>
-                        <input id="loginName" type="text" onchange="API.checkLogin()" oninput="API.checkLogin()" />
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <label for="password">Password:</label>
-                        <input id="password" type="password" value="" min="0" max="100" />
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2">
-                        <button id="LoginBtn" type="submit" disabled onclick="API.doLogin()">Login</button>
-                    </td>
-                </tr>
-            </table>
+
+    <!-- <div id="main">
+        <div class="container">
+            <div class="row">
+                <div class="col-6 col-md-4">
+                    <div class="login-container">
+                        <table>
+                            <tr>
+                                <td>
+                                    <label for="loginName">Login:</label>
+                                    <input id="loginName" type="text" onchange="API.checkLogin()" oninput="API.checkLogin()" />
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label for="password">Password:</label>
+                                    <input id="password" type="password" value="" min="0" max="100" />
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <button id="LoginBtn" type="submit" disabled onclick="API.doLogin()">Login</button>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div class="col-6 col-md-4">
+                    <div id="film-div" class="film-add-container">
+                        <table>
+                            <tr>
+                                <td>
+                                    <label for="newFilmName">Name:</label>
+                                    <input id="newFilmName" type="text" />
+                                </td>
+                                <td>
+                                    <label for="newFilmRating">Rating:</label>
+                                    <input id="newFilmRating" type="number" value="100" min="0" max="100" />
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <button id="newFilmName" class="add-movies" type="submit" onclick="API.createFilm()">Add Film</button>
+                                    <button id="newFilmName" class="add-movies" type="submit" onclick="API.modifyFilm()">Modify Film</button>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div class="col-6 col-md-4">
+                    <div class="film-table-container">
+                        <button id="getFilmsButton" type="submit" onclick="API.getFilms()">Get All Films</button>
+
+                        <table class="film-table" id="film-listing"></table>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <p id="message-display" class="message-area">Welcome, please add a film.</p>
+                </div>
+            </div>
         </div>
 
-        <div id="film-div" class="film-add-container">
-            <table>
-                <tr>
-                    <td>
-                        <label for="newFilmName">Name:</label>
-                        <input id="newFilmName" type="text" />
-                    </td>
-                    <td>
-                        <label for="newFilmRating">Rating:</label>
-                        <input id="newFilmRating" type="number" value="100" min="0" max="100" />
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2"><button id="newFilmName" class="add-movies" type="submit" onclick="API.createFilm()">Add Film</button></td>
-                </tr>
-            </table>
-        </div>
+    </div> -->
 
-        <p id="message-display" class="message-area">Welcome, please add a film.</p>
+    <!--<div id="footer">Copyright © me.com. All rights reserved.</div>
 
-        <div class="film-table-container">
-            <button id="getFilmsButton" type="submit" onclick="API.getFilms()">Get All Films</button>
-
-            <table class="film-table" id="film-listing"></table>
-        </div>
-
-    </div>
-
-    <div id="footer">Copyright © me.com. All rights reserved.</div>
-
-</div>
-
+</div>-->
+<!-- 
 </body>
 
-</html>
+</html>-->
